@@ -1,15 +1,17 @@
-* move tag creation code out of gtext constructor -- too slow! (Thanks Graham)
-* DONE check on gbutton and losing of reference to button during
-  dispatch. This can cause code like: w <- gwindow(); b <- gbutton();
-  add(w,b) to fail under gctorture
-* Issue with statusbar size -- hides fonts (new Gtk issue?)
+* implement editable (gedit, gdf)??
 * selection by rectangle in gtable 
-* fix height on gcombobox, buttons -- sizes to fill in x axis (sizePolicy like Qt?)
 * defaultWidget for buttons.
 * no tag<- methods for gaction?
-* gstatusbar on mac is not tall enough, even if given more height text
-is ugly.
 * svalue<- for gtable calls changed twice
+
+DONE (Fill in orthogonal direction) * fix height on gcombobox, buttons -- sizes to fill in x axis (sizePolicy like Qt?)
+DONE check on gbutton and losing of reference to button during
+  dispatch. This can cause code like: w <- gwindow(); b <- gbutton();
+  add(w,b) to fail under gctorture
+DONE * Issue with statusbar size -- hides fonts (new Gtk issue?)
+ DONE * gstatusbar on mac is not tall enough, even if given more height text
+is ugly.
+DONE * move tag creation code out of gtext constructor -- too slow! (Thanks Graham)
 DONE * gtable, gdf -- size<- list(width, height, columnWidths)
 DONE * give space for size grip
 DONE * TOm points out but in gvarbrowser on 9/24 check this out.
